[package]
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
description = "Implementation of a DKG"
edition = "2018"
exclude = [ "" ]
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "bls_dkg"
readme = "README.md"
repository = "https://github.com/maidsafe/bls_dkg"
version = "0.2.2"

[dependencies]
aes = "~0.3.2"
bincode = "1.2.1"
block-modes = "~0.3.3"
itertools = "~0.9.0"
log = "~0.4.8"
rand = "~0.7.3"
rand_core = "~0.5.1"
serde = "1.0.106"
serde_derive = "1.0.106"
thiserror = "1.0.23"
threshold_crypto = "~0.4.0"
xor_name = "1.1.0"
