[package]
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
description = "Implementation of a DKG"
edition = "2018"
exclude = [ "" ]
homepage = "https://maidsafe.net"
license = "BSD-3-Clause"
name = "bls_dkg"
readme = "README.md"
repository = "https://github.com/maidsafe/bls_dkg"
version = "0.10.2"

[dependencies]
aes = "~0.7.4"
bincode = "1.2.1"
block-modes = "~0.8.1"
blsttc = "5.2.0"
log = "~0.4.8"
rand = "~0.8.5"
rand_core = "~0.6.3"
serde = "1.0.106"
serde_derive = "1.0.106"
thiserror = "1.0.23"
xor_name = "4.0.1"

  [dependencies.tiny-keccak]
  version = "2.0.2"
  features = [ "sha3" ]

[dev-dependencies]
anyhow = "1"
itertools = "~0.9.0"
